# cerebellum-nethmi

./: .gitignore  MNIST_SurpriseDetection_Simulation.ipynb  MNIST_SurpriseDetection_SpikeSetPrep.ipynb  data-prep.py  models.py  pyproject.toml  utils.py
logic/: constants.py  data-prep.py  formulas.py  snn.py  testing.py
