[tool.poetry]
name = "cerebellum-nethmi"
version = "0.1.0"
description = ""
authors = ["Sarah <vanwars@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
keras = "^3.4.1"
tensorflow = "^2.17.0"
brian2 = "^2.7.1"

[tool.poetry.group.dev.dependencies]
lut4brian = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
